# cac4teams

./: .gitignore  Makefile.am  README.md  configure.ac
m4/: signing.m4
packaging/: distribution.xml.in  entitlements.plist
packaging/resources/: welcome-in.rtf  welcome.rtf
src/: cac4teams.c  cac4teams.in  teamscache.c
